test/syc/good/gvar.c
/*
 * Global variable declaration and use
 */

int a, b = 1, c = 2;

int get_a(void)
{
	return a;
}

