test/syc/bad/constvar.c
/*
 * Setting readonly variable (const int).
 * Const is in declaration specifiers.
 */

const int ci = 1;

void foo(void)
{
	ci = 2;
}
